package com.davidluna.tmdb.media_domain.entities.tags

object MediaTag {
    const val MEDIA_CATALOG_SCREEN_VIEW = "MEDIA_CATALOG_SCREEN_VIEW"
    const val MEDIA_FIRST_LIST_LAZY_ROW = "MEDIA_FIRST_LIST_LAZY_ROW"
    const val MEDIA_SECOND_LIST_LAZY_ROW = "MEDIA_SECOND_LIST_LAZY_ROW"
    const val MEDIA_THIRD_LIST_LAZY_ROW = "MEDIA_THIRD_LIST_LAZY_ROW"
    const val MEDIA_FOURTH_LIST_LAZY_ROW = "MEDIA_FOURTH_LIST_LAZY_ROW"
    const val MEDIA_FIRST_LIST_TITLE_VIEW = "MEDIA_FIRST_LIST_TITLE_VIEW"
    const val MEDIA_SECOND_LIST_TITLE_VIEW = "MEDIA_SECOND_LIST_TITLE_VIEW"
    const val MEDIA_THIRD_LIST_TITLE_VIEW = "MEDIA_THIRD_LIST_TITLE_VIEW"
    const val MEDIA_FOURTH_LIST_TITLE_VIEW = "MEDIA_FOURTH_LIST_TITLE_VIEW"
    const val REEL_TITLE_TEXT = "REEL_TITLE_TEXT"
    const val REEL_IMAGE_COLUMN_CONTAINER = "REEL_IMAGE_COLUMN_CONTAINER"
    const val FILM_IMAGE_BOX_CONTAINER = "FILM_IMAGE_BOX_CONTAINER"
    const val FILM_IMAGE_MASK = "FILM_IMAGE_MASK"
    const val FILM_IMAGE = "FILM_IMAGE"
    const val MEDIA_TITLE_TEXT = "MEDIA_TITLE_TEXT"
    const val MEDIA_DETAIL_SCREEN = "MEDIA_DETAIL_SCREEN"
    const val MEDIA_DETAIL_MAIN_COLUMN = "MEDIA_DETAIL_MAIN_COLUMN"
    const val POSTERS_PAGER_VIEW = "POSTERS_PAGER_VIEW"
    const val PAGER_IMAGE = "PAGER_IMAGE"
    const val MEDIA_DETAILS_VIEW = "MEDIA_DETAILS_VIEW"
    const val MEDIA_DETAILS_TITLE_VIEW = "MEDIA_DETAILS_TITLE_VIEW"
    const val MEDIA_DETAILS_RECOMMENDED_LAZY_ROW = "MEDIA_DETAILS_RECOMMENDED_LAZY_ROW"
    const val MEDIA_DETAILS_SIMILAR_LAZY_ROW = "MEDIA_DETAILS_SIMILAR_LAZY_ROW"
    const val MEDIA_DETAILS_RECOMMENDED_TITLE_VIEW = "MEDIA_DETAILS_RECOMMENDED_TITLE_VIEW"
    const val MEDIA_DETAILS_SIMILAR_TITLE_VIEW = "MEDIA_DETAILS_SIMILAR_TITLE_VIEW"
    const val TEXT_RELEASE_DATE = "TEXT_RELEASE_DATE"
    const val TEXT_TAGLINE = "TEXT_TAGLINE"
    const val TEXT_OVERVIEW_TITLE = "TEXT_OVERVIEW_TITLE"
    const val TEXT_OVERVIEW = "TEXT_OVERVIEW"
    const val USER_SCORE_VIEW = "USER_SCORE_VIEW"
    const val USER_SCORE_BOX_CONTAINER = "USER_SCORE_BOX_CONTAINER"
    const val USER_SCORE_PROGRESS = "USER_SCORE_PROGRESS"
    const val USER_SCORE_LABEL = "USER_SCORE_LABEL"
    const val USER_SCORE_PERCENTAGE = "USER_SCORE_PERCENTAGE"
    const val PLAY_TRAILER_BUTTON = "PLAY_TRAILER_BUTTON"
    const val PLAY_TRAILER_BUTTON_ICON = "PLAY_TRAILER_BUTTON_ICON"
    const val PLAY_TRAILER_BUTTON_TEXT = "PLAY_TRAILER_BUTTON_TEXT"
    const val MEDIA_CAST_VIEW = "MEDIA_CAST_VIEW"
    const val MEDIA_CAST_TITLE_VIEW = "MEDIA_CAST_TITLE_VIEW"
    const val CAST_BOX_CONTAINER = "CAST_BOX_CONTAINER"
    const val CAST_IMAGE = "CAST_IMAGE"
    const val CAST_TITLE_BOX_CONTAINER = "CAST_TITLE_BOX_CONTAINER"
    const val CAST_TITLE_TEXT = "CAST_TITLE_TEXT"
}