package com.davidluna.tmdb.core_domain.entities.tags

object CoreTag {
    const val NAV_HOST_VIEW = "NAV_HOST_VIEW"
    const val APP_BAR_VIEW = "APP_BAR_VIEW"
    const val APP_BAR_ICON_BUTTON = "APP_BAR_ICON_BUTTON"
    const val APP_BAR_ICON = "APP_BAR_ICON"
    const val APP_BAR_TITLE = "APP_BAR_TITLE"
    const val TOP_APP_BAR = "TOP_APP_BAR"
    const val APP_SCAFFOLD = "APP_SCAFFOLD"
    const val MODAL_DRAWER_VIEW = "MODAL_DRAWER_VIEW"
    const val DRAWER_VIEW = "DRAWER_VIEW"
    const val DRAWER_ITEM = "DRAWER_ITEM"
    const val DRAWER_ITEM_TITLE = "DRAWER_ITEM_TITLE"
    const val DRAWER_ITEM_ICON = "DRAWER_ITEM_ICON"
    const val USER_IMAGE_CARD = "USER_IMAGE_CARD"
    const val USER_IMAGE = "USER_IMAGE"
    const val GUEST_IMAGE = "GUEST_IMAGE"
    const val USER_NAME = "USER_NAME"
    const val SPLASH_SCREEN_VIEW = "SPLASH_SCREEN_VIEW"
    const val SPLASH_TMDB_LOGO = "SPLASH_TMDB_LOGO"
    const val ERROR_DIALOG_VIEW = "ERROR_DIALOG_VIEW"
    const val SLIDE_ANIMATED_CONTENT = "SLIDE_ANIMATED_CONTENT"
}