package com.davidluna.tmdb.auth_domain.entities.tags

object AuthTag {
    const val AUTH_SCREEN_VIEW = "AUTH_SCREEN_VIEW"
    const val AUTH_LOGIN_BUTTON = "AUTH_LOGIN_BUTTON"
    const val AUTH_GUEST_BUTTON = "AUTH_GUEST_BUTTON"
    const val AUTH_BIOMETRIC_BUTTON = "AUTH_BIOMETRIC_BUTTON"
}