...
    <string name="btn_login">Login</string>
    <string name="btn_login_as_guest">Login as Guest</string>
    <string name="btn_launch_biometrics">Login with fingerprint</string>
    <string name="btn_dismiss_message">Press to dismiss</string>
    <string name="error_dialog_title">Something went wrong</string>
    <string name="title_cast_row">CAST</string>
    <string name="title_overview">Overview</string>
    <string name="user_score_label">User\nscore</string>
    <string name="asset_statements">
[
  {
    "relation": [
      "delegate_permission/common.handle_all_urls"
...
